# bip

./: .clang-format  configure.ac
scripts/: clang-format-all.sh
src/: Makefile.am  bip.c  bip.h  bip_main.c  bipmkpw.c  bucket.c  bucket.h  connection.c  connection.h  irc.c  irc.h  line.c  line.h  log.c  log.h  md5.c  poller.c  poller.h  util.c  util.h
tests/: Makefile.am  bip.test.pem  check_bucket.c  check_connection.c  check_irc.c  check_line.c  check_poller.c
